--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/webpack-dev-server": "^4.5.0",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
+    "html-webpack-plugin": "^5.5.0",
     "serve": "^13.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.5.2",
